--- a/.gitmodules
+++ b/.gitmodules
@@ -1,10 +1,10 @@
 [submodule "backend/src/main/java/io/metersphere/xpack"]
 	path = backend/src/main/java/io/metersphere/xpack
 	url = git@github.com:metersphere/xpack-backend.git
-	branch = v2.0
+	branch = dev
 	ignore = all
 [submodule "frontend/src/business/components/xpack"]
 	path = frontend/src/business/components/xpack
 	url = git@github.com:metersphere/xpack-frontend.git
-	branch = v2.0
+	branch = dev
 	ignore = all
