--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>metersphere-server</artifactId>
     <groupId>io.metersphere</groupId>
-    <version>1.20</version>
+    <version>${revision}</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
