--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,20 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.metersphere</groupId>
     <artifactId>metersphere-server</artifactId>
-    <version>1.20</version>
+    <version>${revision}</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.6</version>
+        <version>2.7.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <name>metersphere</name>
+    <properties>
+        <revision>2.0.0</revision>
+    </properties>
     <modules>
         <module>frontend</module>
         <module>backend</module>
