--- a/backend/src/main/resources/base.properties
+++ b/backend/src/main/resources/base.properties
@@ -87,7 +87,7 @@ kafka.ssl.protocol=TLS
 kafka.ssl.provider=
 kafka.ssl.truststore-type=
 # jmeter
-jmeter.home=/Users/orionc/soft/apache-jmeter-5.4.3
+#jmeter.home=/Users/orionc/soft/apache-jmeter-5.4.3
 
 # quartz
 quartz.enabled=true
