自定义主题调整

--- a/backend/src/main/resources/base.properties
+++ b/backend/src/main/resources/base.properties
@@ -87,6 +87,7 @@ kafka.ssl.protocol=TLS
 kafka.ssl.provider=
 kafka.ssl.truststore-type=
 # jmeter
+#jmeter.home=/opt/jmeter
 jmeter.home=/opt/jmeter
 
 # quartz
