--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -403,6 +403,11 @@
             <artifactId>poi-ooxml</artifactId>
             <version>${poi.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-jdbc</artifactId>
+            <version>3.1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
